--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
     </div>
     <script src="src/index.js"></script>
+   <a href="https://github.com/jwiergowska/my-amazing-app">Edited by Julia Wiergowska</a>
   </body>
 </html>
 
